# The-rift

./: .gitignore  IconSwitcher.kt  app-signed.apk.idsig  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  therift.jks  tsconfig.json  vite.config.js  vite.config.ts
landing/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_fs.rs  lib.rs  main.rs  state.rs
src-tauri/src/discovery/: mdns.rs  mod.rs
src-tauri/src/network/: android_wifi.rs  bond_keeper.rs  broadcast.rs  captive.rs  gateway.rs  heartbeat.rs  hotspot.rs  mod.rs  rift_channel.rs  subnet_scan.rs
src-tauri/src/transfer/: client.rs  integrity.rs  manifest.rs  mod.rs  overseer.rs  server.rs  stream_client.rs  stream_server.rs
src/components/: AcceptDialog.tsx  AgreementScreen.tsx  ContactPanel.tsx  DeviceCard.tsx  DeviceList.tsx  DevicePopup.tsx  DropZone.tsx  HelpPage.tsx  HotspotPanel.tsx  IncomingTextDialog.tsx  MobileLayout.tsx  Portal3D.tsx  SplashScreen.tsx  StatusBar.tsx  TextTransferPanel.tsx  ThemeSelector.tsx  TourOverlay.tsx  TransferItem.tsx  TransferQueue.tsx
src/components/mobile/: MobileAgreementScreen.tsx  MobileDeviceRow.tsx  MobileDevicesPanel.tsx  MobileHelpPage.tsx  MobileSendPanel.tsx  MobileTabBar.tsx  MobileThemePicker.tsx  MobileTourOverlay.tsx  MobileTransfersPanel.tsx  OwnDeviceCard.tsx
src/hooks/: useDevices.ts  useHotspot.ts  useMobile.ts  useTauri.ts  useTheme.ts  useTransfer.ts
src/store/: riftStore.ts
src/types/: index.ts
src/utils/: fileHelpers.ts  legalContent.ts  tabTypes.ts
