[package]
name = "the-rift"
version = "0.1.0"
description = "The Rift — by abyssprotocol"
authors = ["abyssprotocol"]
edition = "2021"

[lib]
name = "the_rift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

mdns-sd = "0.11"
flume = "0.11"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sha2 = "0.10"
blake3 = "1"
hex = "0.4"

uuid = { version = "1", features = ["v4"] }

anyhow = "1"

local-ip-address = "0.6"
hostname = "0.4"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
