[package]
name = "the-rift"
version = "1.1.1"
description = "The Rift — by abyssprotocol"
authors = ["abyssprotocol"]
edition = "2021"

[lib]
name = "the_rift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Optional features ─────────────────────────────────────────────────────────
[features]
# Tier 1 Android file picker: tauri-plugin-android-fs (Tauri plugin infrastructure).
# This is the gold standard — no custom JNI, ActivityResultLauncher registered
# through proper plugin lifecycle hooks.
#
# HOW TO ENABLE:
#   1. Verify the crate is available:
#      - crates.io: https://crates.io/crates/tauri-plugin-android-fs
#      - GitHub:    https://github.com/aiueo13/tauri-plugin-android-fs
#   2. Check the correct version for your Tauri v2 setup and update below.
#   3. Build: cargo tauri android build -- --features android-fs
#
# WITHOUT this feature, Tier 2 (poll-based, guaranteed fix) handles picking.
android-fs = ["dep:tauri-plugin-android-fs"]

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# Tier 1 Android file picker (optional — see [features] android-fs above).
# Version: update to match the published version you verify.
# If git-only: { git = "https://github.com/aiueo13/tauri-plugin-android-fs", optional = true }
tauri-plugin-android-fs = { version = "2", optional = true }

tokio = { version = "1", features = ["full"] }

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

mdns-sd = "0.11"
flume = "0.11"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sha2 = "0.10"
blake3 = "1"
hex = "0.4"

uuid = { version = "1", features = ["v4"] }

anyhow = "1"

local-ip-address = "0.6"
hostname = "0.4"
dirs = "5"

socket2 = { version = "0.5", features = [] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = { version = "0.21", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
